--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -2,30 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_46424/1671629500.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -59,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,23 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"first_name\": \"Jacques\",\n",
-      "  \"last_name\": \"Soulieres\",\n",
-      "  \"date_of_birth\": \"1945/01/17\",\n",
-      "  \"ramq\": \"SOUJ45011713\"\n",
-      "}\n",
-      "first_name='Jacques' last_name='Soulieres' date_of_birth=datetime.datetime(1945, 1, 17, 0, 0) gender='male' ramq='SOUJ45011713'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from pydantic import BaseModel, Field\n",
@@ -162,6 +127,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from pydantic import BaseModel, Field\n",
+    "from datetime import datetime\n",
+    "from typing import Optional, List\n",
+    "\n",
+    "\n",
+    "class PersonInfo(BaseModel):\n",
+    "    first_name: str\n",
+    "    last_name: str\n",
+    "    date_of_birth: datetime\n",
+    "    gender: Optional[str] = None\n",
+    "    ramq: str = Field(\n",
+    "        ...,\n",
+    "        pattern=r\"^[A-Z]{4}\\d{8}$\",\n",
+    "        description=\"RAMQ number in format AAAA00000000\",\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def extract_person_info(text: str) -> Optional[PersonInfo]:\n",
+    "    # Parse the JSON response\n",
+    "    import json\n",
+    "\n",
+    "    data = json.loads(text)\n",
+    "\n",
+    "    # Extract date of birth\n",
+    "    dob = datetime.strptime(data[\"date_of_birth\"], \"%Y/%m/%d\")\n",
+    "\n",
+    "    # Extract gender based on RAMQ\n",
+    "    gender = None\n",
+    "    if \"ramq\" in data:\n",
+    "        gender_digit = int(data[\"ramq\"][6])\n",
+    "        if gender_digit in [5, 6]:\n",
+    "            gender = \"female\"\n",
+    "        elif gender_digit in [0, 1]:\n",
+    "            gender = \"male\"\n",
+    "\n",
+    "    return PersonInfo(\n",
+    "        first_name=data[\"first_name\"],\n",
+    "        last_name=data[\"last_name\"],\n",
+    "        date_of_birth=dob,\n",
+    "        gender=gender,\n",
+    "        ramq=data[\"ramq\"],\n",
+    "    )\n",
+    "\n",
+    "person_text = \"Le paitent est Robert-Calin Avrma, né le 13 janvier 88, ramq AVRR13018805\"\n",
+    "prompt = \"Extract the person's full name, date of birth, gender, and RAMQ number from the text and output as JSON using keys first_name, last_name, date_of_birth in %Y/%m/%d format and ramq which should have 4 letters and 8 digits. Make sure you get the right answer in JSON. Do not be verbose. Here is the text:\" + person_text\n",
+    "\n",
+    "response = anthropic_mm_llm.complete(\n",
+    "    prompt=prompt,\n",
+    "    image_documents=None,\n",
+    ")\n",
+    "print(response)\n",
+    "\n",
+    "try:\n",
+    "    person_info = extract_person_info(response.text)\n",
+    "    if person_info:\n",
+    "        print(person_info)\n",
+    "    else:\n",
+    "        print(\"Could not extract all required information. \")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error processing response: {e}\")\n",
+    "    print(\"Raw response:\", response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -169,16 +204,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RAMQ: ('first_name', 'Jacques')\n",
-      "Last Name: ('last_name', 'Soulieres')\n",
-      "First Name: ('date_of_birth', datetime.datetime(1945, 1, 17, 0, 0))\n",
-      "Date of Birth: ('gender', 'male')\n",
-      "Gender: ('ramq', 'SOUJ45011713')\n"
+      "True\n",
+      "RAMQ: SOUJ45011713\n",
+      "Last Name: Soulieres\n",
+      "First Name: Jacques\n",
+      "Date of Birth: 1945-01-17 00:00:00\n",
+      "Gender: male\n"
      ]
     }
    ],
    "source": [
-    "!python3 main.py \"https://i.ibb.co/vmGcz7Z/IMG-0387.jpg\""
+    "!python3 main.py \"https://i.ibb.co/vmGcz7Z/IMG-0387.jpg\" --is_image=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "RAMQ: AVRR13018805\n",
+      "Last Name: Avrma\n",
+      "First Name: Robert-Calin\n",
+      "Date of Birth: 1988-01-13 00:00:00\n",
+      "Gender: male\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 main.py \"Le paitent est Robert-Calin Avrma, né le 13 janvier 88, ramq AVRR13018805\" --is_image=False\n"
    ]
   },
   {
