added pydantic model for output

--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -254,7 +254,7 @@
       "RAMQ: SOUJ45011713\n",
       "Last Name: SOULIERES\n",
       "First Name: JACQUES\n",
-      "Date of Birth: 1945-01-17\n",
+      "Date of Birth: 1945-01-17 00:00:00\n",
       "Gender: male\n"
      ]
     }
@@ -327,7 +327,7 @@
       "RAMQ: AVRR13018805\n",
       "Last Name: Avrma\n",
       "First Name: Robert-Calin\n",
-      "Date of Birth: 1988-01-13\n",
+      "Date of Birth: 1988-01-13 00:00:00\n",
       "Gender: male\n"
      ]
     }
@@ -335,37 +335,6 @@
    "source": [
     "!python3 main.py \"Le paitent est Robert-Calin Avrma, né le 13 janvier 88, ramq AVRR13018805\" --is_image=False\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[ImageDocument(id_='cd78c358-63b1-4000-b2d0-b582912eeff5', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, text='', mimetype='text/plain', start_char_idx=None, end_char_idx=None, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n', image=None, image_path=None, image_url='https://billr-files.s3.ca-central-1.amazonaws.com/cabd2edb.png', image_mimetype=None, text_embedding=None)]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from llama_index.core.multi_modal_llms.generic_utils import load_image_urls\n",
-    "\n",
-    "\n",
-    "image_url = \"https://billr-files.s3.ca-central-1.amazonaws.com/cabd2edb.png?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjENX%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaDGNhLWNlbnRyYWwtMSJIMEYCIQDtxIqMaVBZYwPZ5%2FrNMHUYdopYx7JSpijaoztCyl1LfgIhAIHt8g05nBideDbUz0N%2BnKEjHRStYfJGKHaT9aij3Mj%2FKo4DCI7%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEQBRoMMjQ2MTUyOTUwOTk0Igzp1MjdanYrnQ11Xboq4gLwqS1O7k%2BAclTMKyhGTt%2FQ3H%2FmVl8yOSZhJ4147f4VjgfNDfNxChW1Ps3llPcpTrsCpNcDvGyfgR87LR73gPCQ4jZ1Gr29C2bsCh85K%2F30yqcmLyHGM8yrjafUPe%2FDQl3LgVI4RUdos%2Fav8j9OYWysRO7nw1plF6Kkl7ILtXVK7F0KiXDFWVDjLCeTEUQllQL35PCZ%2FIywj3mgKA0L2Q0GTY471YN%2B7d9YjH42FHYL%2BQ7p1mM2gMKE9OsVAgls1WfOrQLOMhnPsIaUUK0pSXGTuThqw7pOsAE%2Bk6RIGiIjQsVm4LYxo3uvjzJJ4gpmzGVU0qIA8ZWJU1G7JTJpJdAUIY26NGNiguTaluY6ZjgSR41jklau3jw6zXUI9jKxe63%2FFRdP0PZLDHNUmQgCucNSHHlfhvbakwSbPY7OfpdMWwAvnvc4MjjEA6oFEYZQfaE3qn%2BBq96N9Xasxnl1s26%2FpM8wgY6VtAY6sgI4n8vRA%2Fu1zMsSJKPWoOpFAohn5VCFerI5NHLTYzqsqWDjwFUyABNF2r%2FADKilJyOSkkDO7xCXCE%2FJeD%2ByVoxAxUo%2BniY9UPrDIHtviN733cVNCsFKL3nfKdNxTETh4aAs9x1JVPi1nrK%2F0thBx29w5XmPXgkmFkalaF3QZlwP95tc8v%2B6ni3OMf1IuKYw7OW6%2F8Bh6ByXGa5Orhkq5x%2Fci0I89xED3uGHjahYXCbVyfJmHQb2F3596Y5qCKKNR9yKK1HreurMCIm1kWVuKZMzulbCd1PCmut9HHlxEtk95eMZ5Ki8wlRKnLUDSkR%2F%2BT67KJDR6b2kCahJpsiA4OWlwvuvQQXQ1fLb0w%2B9FmVb0ar7NYb5fsglhkf7QEW48ndqHMF636%2F7ZbV9hBmYwFt%2BkPE%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240703T124251Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIATST636TJB7FS7E6Z%2F20240703%2Fca-central-1%2Fs3%2Faws4_request&X-Amz-Signature=28891fcd09f1f2b6b372be66594ed840a8c7d6825fd632680be85ab89fc22bc7\"\n",
-    "image_documents = load_image_urls([image_url])\n",
-    "display(image_documents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
