--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -158,7 +158,7 @@
     "\n",
     "for idx, image_doc in enumerate(image_documents):\n",
     "    response = anthropic_mm_llm.complete(\n",
-    "        prompt=\"Perform OCR. Extract the RAMQ number, which MUST have exactly 4 letters followed by exactly 8 digits, totaling 12 characters. Remove all spaces from RAMQ. The first 3 letters of RAMQ are the person's last name use that to look up the last name in the text. First name starts with the 4th letter of the RAMQ AND Should be a name! Extract the person's first name, last name, date of birth, and RAMQ number. Output as JSON with keys: 'first_name', 'last_name', 'date_of_birth' (in %Y/%m/%d format), and 'ramq'. Ensure the RAMQ is exactly 12 characters (4 letters + 8 digits). Double-check your output before responding. Do not be VERBOSE and DO NOT include any text outside the JSON object.\",\n",
+    "        prompt=\"Perform OCR. Extract the RAMQ number, which MUST have exactly 4 letters followed by exactly 8 digits, totaling 12 characters. Remove all spaces from RAMQ. The first 3 letters of RAMQ are the person's last name use that to look up the last name in the text. First name starts with the 4th letter of the RAMQ AND Should be a name! Extract the person's first name, last name, date of birth, and RAMQ number. Output as JSON with keys: 'first_name', 'last_name', and 'ramq'. Ensure the RAMQ is exactly 12 characters (4 letters + 8 digits). Double-check your output before responding. Do not be VERBOSE and DO NOT include any text outside the JSON object.\",\n",
     "        image_documents=[image_doc],\n",
     "    )\n",
     "    print(response)\n",
@@ -226,7 +226,7 @@
     "    )\n",
     "\n",
     "person_text = \"Le paitent est Robert-Calin Avrma, né le 13 janvier 88, ramq AVRR13018805\"\n",
-    "prompt = \"Extract the person's full name, date of birth, gender, and RAMQ number from the text and output as JSON using keys first_name, last_name, date_of_birth in %Y/%m/%d format and ramq which should have 4 letters and 8 digits. Make sure you get the right answer in JSON. Do not be verbose. Here is the text:\" + person_text\n",
+    "prompt = \"Extract the person's full name, date of birth, gender, and RAMQ number from the text and output as JSON using keys first_name, last_name, and ramq which should have 4 letters and 8 digits. Make sure you get the right answer in JSON. Do not be verbose. Here is the text:\" + person_text\n",
     "\n",
     "response = anthropic_mm_llm.complete(\n",
     "    prompt=prompt,\n",
