added example with 2 PNG how to run script

--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -2,9 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_4606/1671629500.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -67,19 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAMQ: SOUJ45011713\n",
+      "Name: JACQUES SOULIERES\n",
+      "Date of Birth: 1945-01-17\n",
+      "---\n"
+     ]
+    }
+   ],
    "source": [
     "import anthropic_vision_script\n",
     "from anthropic_vision_script import get_ramq as get_ramq_from_image\n",
     "# Assuming you have a list of image URLs\n",
     "image_urls = [\n",
-    "    \"https://i.ibb.co/7Jm0KvX/IMG-2618.jpg\",\n",
-    "    \"https://i.ibb.co/m92CFv2/IMG-2608.jpg\",\n",
-    "    \"https://i.ibb.co/3MdsCGv/IMG-2610.jpg\",\n",
-    "    \"https://i.ibb.co/vV9MCcj/IMG-2611.jpg\",\n",
-    "    \"https://i.ibb.co/1qjwRbb/Screenshot-2024-09-13-at-9-25-47-PM.png\",\n",
+    "    \"https://i.ibb.co/x3Y2Jjh/Screenshot-2024-09-20-at-3-22-48-PM.png\",\n",
+    "    \"https://i.ibb.co/GPTwzx5/Screenshot-2024-09-20-at-3-22-43-PM.png\"\n",
     "]\n",
     "\n",
     "for url in image_urls:\n",
@@ -95,6 +124,13 @@
     "        print(f\"Error processing image {url}: {str(e)}\")\n",
     "        print(\"---\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
