added ramq validation

--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_6143/160590446.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_39861/160590446.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,32 @@
     "# load image documents from urls\n",
     "image_documents = load_image_urls(\n",
     "    [\"https://i.ibb.co/7Jm0KvX/IMG-2618.jpg\",\"https://i.ibb.co/m92CFv2/IMG-2608.jpg\", \"https://i.ibb.co/3MdsCGv/IMG-2610.jpg\", \"https://i.ibb.co/vV9MCcj/IMG-2611.jpg\", \"https://i.ibb.co/1qjwRbb/Screenshot-2024-09-13-at-9-25-47-PM.png\"]\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAMQ: SOUJ45011713\n",
+      "Name: JACQUES SOULIERES\n",
+      "Date of Birth: 1945-01-17\n",
+      "RAMQ is valid: True\n",
+      "---\n",
+      "RAMQ: MASL64521523\n",
+      "Name: ASSON LINE\n",
+      "Date of Birth: 1964-02-15\n",
+      "RAMQ is valid: True\n",
+      "---\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "import anthropic_vision_script\n",
     "from anthropic_vision_script import get_ramq as get_ramq_from_image\n",
     "# Assuming you have a list of image URLs\n",
@@ -107,6 +122,7 @@
     "        print(\n",
     "            f\"Date of Birth: {person_info[3].date()}\"\n",
     "        )  # Use .date() to get only the date part\n",
+    "        print(f\"RAMQ is valid: {person_info[5]}\")\n",
     "        print(\"---\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing image {url}: {str(e)}\")\n",
@@ -115,9 +131,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"first_name\": \"ALICE\",\n",
+      "  \"last_name\": \"PERREAULT\",\n",
+      "  \"ramq\": \"PERA51020264\"\n",
+      "}\n",
+      "first_name='ALICE' last_name='PERREAULT' date_of_birth=datetime.datetime(1951, 2, 2, 0, 0) gender='male' ramq='PERA51020264'\n",
+      "{\n",
+      "  \"first_name\": \"CLAUDETTE\",\n",
+      "  \"last_name\": \"GARAND\",\n",
+      "  \"ramq\": \"GARC43611416\"\n",
+      "}\n",
+      "first_name='CLAUDETTE' last_name='GARAND' date_of_birth=datetime.datetime(1943, 11, 14, 0, 0) gender='female' ramq='GARC43611416'\n",
+      "{\n",
+      "  \"first_name\": \"DENISE\",\n",
+      "  \"last_name\": \"DURAND\",\n",
+      "  \"ramq\": \"DURD426019121\"\n",
+      "}\n",
+      "Error processing response: 1 validation error for PersonInfo\n",
+      "ramq\n",
+      "  String should match pattern '^[A-Z]{4}\\d{8}$' [type=string_pattern_mismatch, input_value='DURD426019121', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.7/v/string_pattern_mismatch\n",
+      "Raw response: {\n",
+      "  \"first_name\": \"DENISE\",\n",
+      "  \"last_name\": \"DURAND\",\n",
+      "  \"ramq\": \"DURD426019121\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from pydantic import BaseModel, Field\n",
@@ -312,10 +361,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Patient list"
    ]
