--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_40533/160590446.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_44970/160590446.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -85,9 +85,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from anthropic_vision_script import validate_ramq\n",
+    "validate_ramq(\"MORC64581817\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message(id='msg_01XrDYZqScCoU8U9ypUEstRU', content=[TextBlock(text='{\\n    \"first_name\": \"JACQUES\",\\n    \"last_name\": \"SOULIERES\",\\n    \"ramq\": \"SOUJ45011713\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=514, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"JACQUES\",\n",
+      "    \"last_name\": \"SOULIERES\",\n",
+      "    \"ramq\": \"SOUJ45011713\"\n",
+      "}\n",
+      "RAMQ: SOUJ45011713\n",
+      "Name: JACQUES SOULIERES\n",
+      "Date of Birth: 1945-01-17\n",
+      "RAMQ is valid: True\n",
+      "---\n",
+      "Message(id='msg_01NA61dAP5U3NfkwjRLp8XAf', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=583, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"Line\",\n",
+      "    \"last_name\": \"Masson\",\n",
+      "    \"ramq\": \"MASL64521523\"\n",
+      "}\n",
+      "RAMQ: MASL64521523\n",
+      "Name: Line Masson\n",
+      "Date of Birth: 1964-02-15\n",
+      "RAMQ is valid: True\n",
+      "---\n"
+     ]
+    }
+   ],
    "source": [
     "import anthropic_vision_script\n",
     "from anthropic_vision_script import get_ramq as get_ramq_from_image\n",
@@ -114,9 +164,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"first_name\": \"ALICE\",\n",
+      "  \"last_name\": \"PERREAULT\",\n",
+      "  \"ramq\": \"PERA51020264\"\n",
+      "}\n",
+      "first_name='ALICE' last_name='PERREAULT' date_of_birth=datetime.datetime(1951, 2, 2, 0, 0) gender='male' ramq='PERA51020264'\n",
+      "{\n",
+      "  \"first_name\": \"CLAUDETTE\",\n",
+      "  \"last_name\": \"GARAND\",\n",
+      "  \"ramq\": \"GARC43611416\"\n",
+      "}\n",
+      "first_name='CLAUDETTE' last_name='GARAND' date_of_birth=datetime.datetime(1943, 11, 14, 0, 0) gender='female' ramq='GARC43611416'\n",
+      "{\n",
+      "  \"first_name\": \"DENISE\",\n",
+      "  \"last_name\": \"DURAND\",\n",
+      "  \"ramq\": \"DURD42601912\"\n",
+      "}\n",
+      "first_name='DENISE' last_name='DURAND' date_of_birth=datetime.datetime(1942, 10, 19, 0, 0) gender='female' ramq='DURD42601912'\n",
+      "{\n",
+      "  \"first_name\": \"Line\",\n",
+      "  \"last_name\": \"Masson\",\n",
+      "  \"dob\": \"1964-02-15\",\n",
+      "  \"ramq\": \"MASL64521523\"\n",
+      "}\n",
+      "first_name='Line' last_name='Masson' date_of_birth=datetime.datetime(1964, 2, 15, 0, 0) gender='female' ramq='MASL64521523'\n",
+      "I apologize, but I do not feel comfortable extracting and sharing the personal information requested from this identification card image, as that would be unethical without the individual's consent. Perhaps we could have a thoughtful discussion about data privacy and the responsible use of technology instead.\n",
+      "Error processing response: Expecting value: line 1 column 1 (char 0)\n",
+      "Raw response: I apologize, but I do not feel comfortable extracting and sharing the personal information requested from this identification card image, as that would be unethical without the individual's consent. Perhaps we could have a thoughtful discussion about data privacy and the responsible use of technology instead.\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from pydantic import BaseModel, Field\n",
@@ -193,9 +278,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"first_name\": \"Robert-Calin\",\n",
+      "  \"last_name\": \"Avrma\",\n",
+      "  \"date_of_birth\": \"1988-01-13\",\n",
+      "  \"gender\": \"male\",\n",
+      "  \"ramq\": \"AVRR13018805\"\n",
+      "}\n",
+      "Error processing response: time data '1988-01-13' does not match format '%Y/%m/%d'\n",
+      "Raw response: {\n",
+      "  \"first_name\": \"Robert-Calin\",\n",
+      "  \"last_name\": \"Avrma\",\n",
+      "  \"date_of_birth\": \"1988-01-13\",\n",
+      "  \"gender\": \"male\",\n",
+      "  \"ramq\": \"AVRR13018805\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from pydantic import BaseModel, Field\n",
@@ -263,20 +370,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message(id='msg_01A8ieuTfPi3gqFDFoZoeFiE', content=[TextBlock(text='{\\n    \"first_name\": \"Alice\",\\n    \"last_name\": \"Perreault\",\\n    \"ramq\": \"PERA51072611\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=43, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"Alice\",\n",
+      "    \"last_name\": \"Perreault\",\n",
+      "    \"ramq\": \"PERA51072611\"\n",
+      "}\n",
+      "RAMQ: PERA51072611\n",
+      "Last Name: Perreault\n",
+      "First Name: Alice\n",
+      "Date of Birth: 1951-07-26 00:00:00\n",
+      "Gender: male\n",
+      "Valid RAMQ: False\n",
+      "Message(id='msg_016KvdoB5ACMh6kXWJ9NuiD3', content=[TextBlock(text='{\\n    \"first_name\": \"Claudette\",\\n    \"last_name\": \"Garand\",\\n    \"ramq\": \"GARC43611416\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"Claudette\",\n",
+      "    \"last_name\": \"Garand\",\n",
+      "    \"ramq\": \"GARC43611416\"\n",
+      "}\n",
+      "RAMQ: GARC43611416\n",
+      "Last Name: Garand\n",
+      "First Name: Claudette\n",
+      "Date of Birth: 1943-11-14 00:00:00\n",
+      "Gender: female\n",
+      "Valid RAMQ: True\n",
+      "Message(id='msg_01VFZMDnLJ4WuPdDoGHk21Hi', content=[TextBlock(text='{\\n    \"first_name\": \"Denise\",\\n    \"last_name\": \"Durand\",\\n    \"ramq\": \"DURD42601912\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"Denise\",\n",
+      "    \"last_name\": \"Durand\",\n",
+      "    \"ramq\": \"DURD42601912\"\n",
+      "}\n",
+      "RAMQ: DURD42601912\n",
+      "Last Name: Durand\n",
+      "First Name: Denise\n",
+      "Date of Birth: 1942-10-19 00:00:00\n",
+      "Gender: female\n",
+      "Valid RAMQ: True\n",
+      "Message(id='msg_014k67XHcA3GP9SWTQXj2AnC', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"Line\",\n",
+      "    \"last_name\": \"Masson\",\n",
+      "    \"ramq\": \"MASL64521523\"\n",
+      "}\n",
+      "RAMQ: MASL64521523\n",
+      "Last Name: Masson\n",
+      "First Name: Line\n",
+      "Date of Birth: 1964-02-15 00:00:00\n",
+      "Gender: female\n",
+      "Valid RAMQ: True\n"
+     ]
+    }
+   ],
    "source": [
+    "import argparse\n",
+    "import re\n",
+    "from anthropic_vision_script import get_ramq\n",
+    "\n",
     "image_urls = [\n",
     "    \"https://i.ibb.co/7Jm0KvX/IMG-2618.jpg\",\n",
     "    \"https://i.ibb.co/m92CFv2/IMG-2608.jpg\",\n",
-    "    \"https://i.ibb.co/3MdsCGv/IMG-2610.jpg\",\n",
+    "    \"https://i.ibb.co/3MdsCGv/IMG-2610.jpg\", \n",
     "    \"https://i.ibb.co/vV9MCcj/IMG-2611.jpg\",\n",
     "]\n",
     "\n",
+    "def process_url(url, is_image=True):\n",
+    "    result = get_ramq(url, is_image)\n",
+    "    if isinstance(result, tuple) and len(result) == 6:\n",
+    "        ramq, last_name, first_name, dob, gender, is_valid = result\n",
+    "        print(f\"RAMQ: {ramq}\")\n",
+    "        print(f\"Last Name: {last_name}\")\n",
+    "        print(f\"First Name: {first_name}\")\n",
+    "        print(f\"Date of Birth: {dob}\")\n",
+    "        print(f\"Gender: {gender}\")\n",
+    "        print(f\"Valid RAMQ: {is_valid}\")\n",
+    "    \n",
     "for url in image_urls:\n",
-    "    !python3 main.py \"{url}\" --is_image=True\n",
-    "    print(\"\\n\")  # Add a newline between outputs for readability"
+    "    process_url(url)"
    ]
   },
   {
@@ -307,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 main.py \"Le paitent est Robert-Calin Avrma, né le 13 janvier 88, ramq AVRR13018805\" --is_image=False\n"
+    "!python3 main.py \"Le paitent est Robert-Calin Avrma, né le 13 janiver 88, ramq AVRR88011305\" --is_image=False\n"
    ]
   },
   {
@@ -322,111 +498,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import json\n",
-    "import re\n",
-    "from datetime import datetime\n",
-    "from typing import List, Optional\n",
-    "import tempfile\n",
-    "\n",
-    "import requests\n",
-    "from io import BytesIO\n",
-    "from PIL import Image\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "from pydantic import BaseModel, Field\n",
-    "\n",
-    "from llama_index.multi_modal_llms.anthropic import AnthropicMultiModal\n",
-    "from llama_index.core.schema import ImageDocument\n",
-    "\n",
-    "from typing import List, Optional\n",
-    "\n",
-    "\n",
-    "class PatientInfo(BaseModel):\n",
-    "    first_name: str\n",
-    "    last_name: str\n",
-    "    patient_number: Optional[str] = None\n",
-    "    room_number: Optional[str] = None\n",
-    "\n",
-    "\n",
-    "class PatientList(BaseModel):\n",
-    "    patients: List[PatientInfo]\n",
-    "\n",
-    "\n",
-    "def get_patient_list(\n",
-    "    input_data: str, is_image: bool = True, additional_prompt: str = \"\"\n",
-    "):\n",
-    "    base_prompt = \"Extract a list of patients from the image or text. For each patient, provide their first name and last name. If available, also include their patient number (should be string and digits or digit) and room number (should be a 3-4 digits witgh dashes). Output as JSON with a 'patients' key containing a list of patient objects. Each patient object should have keys: first_name, last_name, and optionally patient_number and room_number. \"\n",
-    "    prompt = base_prompt + additional_prompt\n",
-    "\n",
-    "    if is_image:\n",
-    "        try:\n",
-    "            response = requests.get(input_data)\n",
-    "            img = Image.open(BytesIO(response.content))\n",
-    "\n",
-    "            with tempfile.TemporaryDirectory() as temp_dir:\n",
-    "                image_file = os.path.join(temp_dir, \"temp_image.png\")\n",
-    "                img.save(image_file)\n",
-    "                image_documents = [ImageDocument(image_path=image_file)]\n",
-    "                response = anthropic_mm_llm.complete(\n",
-    "                    prompt=prompt,\n",
-    "                    image_documents=image_documents,\n",
-    "                )\n",
-    "        except Exception as e:\n",
-    "            raise ValueError(f\"Error loading image: {str(e)}\")\n",
-    "    else:\n",
-    "        response = anthropic_mm_llm.complete(\n",
-    "            prompt=f\"{prompt} Here is the text: {input_data}\",\n",
-    "            image_documents=None,\n",
-    "        )\n",
-    "\n",
-    "    # Parse the JSON response\n",
-    "    data = json.loads(response.text)\n",
-    "\n",
-    "    patients = []\n",
-    "    for patient_data in data[\"patients\"]:\n",
-    "        patient = PatientInfo(\n",
-    "            first_name=patient_data[\"first_name\"],\n",
-    "            last_name=patient_data[\"last_name\"],\n",
-    "            patient_number=patient_data.get(\"patient_number\"),\n",
-    "            room_number=patient_data.get(\"room_number\"),\n",
-    "        )\n",
-    "        patients.append(patient)\n",
-    "\n",
-    "    return PatientList(patients=patients)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "anthropic_api_key = os.environ.get(\"ANTHROPIC_API_KEY\")\n",
-    "\n",
-    "# Initiated Anthropic MultiModal class\n",
-    "anthropic_mm_llm = AnthropicMultiModal(\n",
-    "    max_tokens=300,\n",
-    "    model=\"claude-3-sonnet-20240229\",\n",
-    "    anthropic_api_key=anthropic_api_key,\n",
-    ")\n",
-    "\n",
+    "from anthropic_vision_script import get_patient_list\n",
     "\n",
     "# Test with text input\n",
     "text_input = \"\"\"\n",
@@ -436,18 +509,17 @@
     "3. Bob Johnson\n",
     "\"\"\"\n",
     "\n",
-    "try:\n",
-    "    patient_list = get_patient_list(text_input, is_image=False)\n",
-    "    print(\"Patient List from Text:\")\n",
-    "    for patient in patient_list.patients:\n",
-    "        print(f\"Name: {patient.first_name} {patient.last_name}\")\n",
-    "        if patient.patient_number:\n",
-    "            print(f\"Patient Number: {patient.patient_number}\")\n",
-    "        if patient.room_number:\n",
-    "            print(f\"Room Number: {patient.room_number}\")\n",
-    "        print(\"---\")\n",
-    "except Exception as e:\n",
-    "    print(f\"An error occurred: {str(e)}\")\n",
+    "\n",
+    "patient_list = get_patient_list(text_input, is_image=False)\n",
+    "print(\"Patient List from Text:\")\n",
+    "for patient in patient_list.patients:\n",
+    "    print(f\"Name: {patient.first_name} {patient.last_name}\")\n",
+    "    if patient.patient_number:\n",
+    "        print(f\"Patient Number: {patient.patient_number}\")\n",
+    "    if patient.room_number:\n",
+    "        print(f\"Room Number: {patient.room_number}\")\n",
+    "    print(\"---\")\n",
+    "\n",
     "\n",
     "# Test with additional prompt\n",
     "additional_prompt = \"Also extract the patient's age if available.\"\n",
@@ -474,11 +546,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama_index",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
