fixed logic bug with dates

--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -370,55 +370,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message(id='msg_01A8ieuTfPi3gqFDFoZoeFiE', content=[TextBlock(text='{\\n    \"first_name\": \"Alice\",\\n    \"last_name\": \"Perreault\",\\n    \"ramq\": \"PERA51072611\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=43, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01FmVuJEzi6RBthFGR2UMMpH', content=[TextBlock(text='{\\n  \"first_name\": \"Alice\",\\n  \"last_name\": \"Perreault\",\\n  \"ramq\": \"PERA95102761\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=43, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
-      "    \"first_name\": \"Alice\",\n",
-      "    \"last_name\": \"Perreault\",\n",
-      "    \"ramq\": \"PERA51072611\"\n",
+      "  \"first_name\": \"Alice\",\n",
+      "  \"last_name\": \"Perreault\",\n",
+      "  \"ramq\": \"PERA95102761\"\n",
       "}\n",
-      "RAMQ: PERA51072611\n",
+      "1995 10 27\n",
+      "male\n",
+      "RAMQ: PERA95102761\n",
       "Last Name: Perreault\n",
       "First Name: Alice\n",
-      "Date of Birth: 1951-07-26 00:00:00\n",
+      "Date of Birth: 1995-10-27 00:00:00\n",
       "Gender: male\n",
       "Valid RAMQ: False\n",
-      "Message(id='msg_016KvdoB5ACMh6kXWJ9NuiD3', content=[TextBlock(text='{\\n    \"first_name\": \"Claudette\",\\n    \"last_name\": \"Garand\",\\n    \"ramq\": \"GARC43611416\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
-      "{\n",
-      "    \"first_name\": \"Claudette\",\n",
-      "    \"last_name\": \"Garand\",\n",
-      "    \"ramq\": \"GARC43611416\"\n",
-      "}\n",
+      "Message(id='msg_01H5kCar8hQvrFEfdETc2jzd', content=[TextBlock(text='{\"first_name\": \"CLAUDETTE\", \"last_name\": \"GARAND\", \"ramq\": \"GARC43611416\"}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=35, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\"first_name\": \"CLAUDETTE\", \"last_name\": \"GARAND\", \"ramq\": \"GARC43611416\"}\n",
+      "1943 11 14\n",
+      "female\n",
       "RAMQ: GARC43611416\n",
-      "Last Name: Garand\n",
-      "First Name: Claudette\n",
+      "Last Name: GARAND\n",
+      "First Name: CLAUDETTE\n",
       "Date of Birth: 1943-11-14 00:00:00\n",
       "Gender: female\n",
       "Valid RAMQ: True\n",
-      "Message(id='msg_01VFZMDnLJ4WuPdDoGHk21Hi', content=[TextBlock(text='{\\n    \"first_name\": \"Denise\",\\n    \"last_name\": \"Durand\",\\n    \"ramq\": \"DURD42601912\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_018ard4ZikBkQTXPNf4PKZm9', content=[TextBlock(text='{\\n    \"first_name\": \"Denise\",\\n    \"last_name\": \"Durand\",\\n    \"ramq\": \"DURD42601912\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
       "    \"first_name\": \"Denise\",\n",
       "    \"last_name\": \"Durand\",\n",
       "    \"ramq\": \"DURD42601912\"\n",
       "}\n",
+      "1942 10 19\n",
+      "female\n",
       "RAMQ: DURD42601912\n",
       "Last Name: Durand\n",
       "First Name: Denise\n",
       "Date of Birth: 1942-10-19 00:00:00\n",
       "Gender: female\n",
       "Valid RAMQ: True\n",
-      "Message(id='msg_014k67XHcA3GP9SWTQXj2AnC', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_016wLn2CNPzPdcQgdL5v946Y', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
       "    \"first_name\": \"Line\",\n",
       "    \"last_name\": \"Masson\",\n",
       "    \"ramq\": \"MASL64521523\"\n",
       "}\n",
+      "1964 2 15\n",
+      "female\n",
       "RAMQ: MASL64521523\n",
       "Last Name: Masson\n",
       "First Name: Line\n",
