--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -377,52 +377,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message(id='msg_01FmVuJEzi6RBthFGR2UMMpH', content=[TextBlock(text='{\\n  \"first_name\": \"Alice\",\\n  \"last_name\": \"Perreault\",\\n  \"ramq\": \"PERA95102761\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=43, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01NNVXF4fUyHbPFKX99vFRHf', content=[TextBlock(text='{\\n    \"first_name\": \"Alice\",\\n    \"last_name\": \"Perreault\",\\n    \"ramq\": \"PERA51027611\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=43, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
-      "  \"first_name\": \"Alice\",\n",
-      "  \"last_name\": \"Perreault\",\n",
-      "  \"ramq\": \"PERA95102761\"\n",
+      "    \"first_name\": \"Alice\",\n",
+      "    \"last_name\": \"Perreault\",\n",
+      "    \"ramq\": \"PERA51027611\"\n",
       "}\n",
-      "1995 10 27\n",
-      "male\n",
-      "RAMQ: PERA95102761\n",
+      "Unsupported date format: 1951-02-76\n",
+      "RAMQ: PERA51027611\n",
       "Last Name: Perreault\n",
       "First Name: Alice\n",
-      "Date of Birth: 1995-10-27 00:00:00\n",
+      "Date of Birth: 2025-02-01 10:35:36.432708\n",
       "Gender: male\n",
       "Valid RAMQ: False\n",
-      "Message(id='msg_01H5kCar8hQvrFEfdETc2jzd', content=[TextBlock(text='{\"first_name\": \"CLAUDETTE\", \"last_name\": \"GARAND\", \"ramq\": \"GARC43611416\"}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=35, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
-      "{\"first_name\": \"CLAUDETTE\", \"last_name\": \"GARAND\", \"ramq\": \"GARC43611416\"}\n",
-      "1943 11 14\n",
-      "female\n",
+      "Message(id='msg_01AjPNMGHdagSUfSCkt2GgzB', content=[TextBlock(text='{\\n\"first_name\": \"CLAUDETTE\",\\n\"last_name\": \"GARAND\",\\n\"ramq\": \"GARC43611416\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=41, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "\"first_name\": \"CLAUDETTE\",\n",
+      "\"last_name\": \"GARAND\",\n",
+      "\"ramq\": \"GARC43611416\"\n",
+      "}\n",
       "RAMQ: GARC43611416\n",
       "Last Name: GARAND\n",
       "First Name: CLAUDETTE\n",
       "Date of Birth: 1943-11-14 00:00:00\n",
       "Gender: female\n",
       "Valid RAMQ: True\n",
-      "Message(id='msg_018ard4ZikBkQTXPNf4PKZm9', content=[TextBlock(text='{\\n    \"first_name\": \"Denise\",\\n    \"last_name\": \"Durand\",\\n    \"ramq\": \"DURD42601912\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
-      "{\n",
-      "    \"first_name\": \"Denise\",\n",
-      "    \"last_name\": \"Durand\",\n",
-      "    \"ramq\": \"DURD42601912\"\n",
-      "}\n",
-      "1942 10 19\n",
-      "female\n",
+      "Message(id='msg_013dxHY7Km1XdaByEPz7Lya9', content=[TextBlock(text='{\"first_name\": \"DENISE\", \"last_name\": \"DURAND\", \"ramq\": \"DURD42601912\"}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=35, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\"first_name\": \"DENISE\", \"last_name\": \"DURAND\", \"ramq\": \"DURD42601912\"}\n",
       "RAMQ: DURD42601912\n",
-      "Last Name: Durand\n",
-      "First Name: Denise\n",
+      "Last Name: DURAND\n",
+      "First Name: DENISE\n",
       "Date of Birth: 1942-10-19 00:00:00\n",
       "Gender: female\n",
       "Valid RAMQ: True\n",
-      "Message(id='msg_016wLn2CNPzPdcQgdL5v946Y', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01U1rsNjTAiA7s8P4dqVRMC4', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
       "    \"first_name\": \"Line\",\n",
       "    \"last_name\": \"Masson\",\n",
       "    \"ramq\": \"MASL64521523\"\n",
       "}\n",
-      "1964 2 15\n",
-      "female\n",
       "RAMQ: MASL64521523\n",
       "Last Name: Masson\n",
       "First Name: Line\n",
