--- a/Test_Azure_Vision.ipynb
+++ b/Test_Azure_Vision.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_44970/160590446.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "/var/folders/q6/cxd2nmm545jg25nx6h1zg6wm0000gn/T/ipykernel_66913/160590446.py:8: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -113,27 +113,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message(id='msg_01XrDYZqScCoU8U9ypUEstRU', content=[TextBlock(text='{\\n    \"first_name\": \"JACQUES\",\\n    \"last_name\": \"SOULIERES\",\\n    \"ramq\": \"SOUJ45011713\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=514, output_tokens=44, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01GnvpA2u3d2zNST75HPVgzA', content=[TextBlock(text='{\\n    \"first_name\": \"Jacques\",\\n    \"last_name\": \"Soulieres\",\\n    \"ramq\": \"SOUJ45011713\",\\n    \"mrn\": \"N52101\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=558, output_tokens=54, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
-      "    \"first_name\": \"JACQUES\",\n",
-      "    \"last_name\": \"SOULIERES\",\n",
-      "    \"ramq\": \"SOUJ45011713\"\n",
+      "    \"first_name\": \"Jacques\",\n",
+      "    \"last_name\": \"Soulieres\",\n",
+      "    \"ramq\": \"SOUJ45011713\",\n",
+      "    \"mrn\": \"N52101\"\n",
       "}\n",
       "RAMQ: SOUJ45011713\n",
-      "Name: JACQUES SOULIERES\n",
+      "Name: Jacques Soulieres\n",
       "Date of Birth: 1945-01-17\n",
       "RAMQ is valid: True\n",
+      "MRN: N52101\n",
       "---\n",
-      "Message(id='msg_01NA61dAP5U3NfkwjRLp8XAf', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=583, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_014DebAjeCreYKCwKaDBMT5R', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\",\\n    \"mrn\": \"115997\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=627, output_tokens=52, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
       "    \"first_name\": \"Line\",\n",
       "    \"last_name\": \"Masson\",\n",
-      "    \"ramq\": \"MASL64521523\"\n",
+      "    \"ramq\": \"MASL64521523\",\n",
+      "    \"mrn\": \"115997\"\n",
       "}\n",
       "RAMQ: MASL64521523\n",
       "Name: Line Masson\n",
       "Date of Birth: 1964-02-15\n",
       "RAMQ is valid: True\n",
+      "MRN: 115997\n",
       "---\n"
      ]
     }
@@ -156,6 +160,7 @@
     "            f\"Date of Birth: {person_info[3].date()}\"\n",
     "        )  # Use .date() to get only the date part\n",
     "        print(f\"RAMQ is valid: {person_info[5]}\")\n",
+    "        print(f\"MRN: {person_info[6]}\")\n",
     "        print(\"---\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing image {url}: {str(e)}\")\n",
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,6 +185,7 @@
       "{\n",
       "  \"first_name\": \"CLAUDETTE\",\n",
       "  \"last_name\": \"GARAND\",\n",
+      "  \"dob\": \"1943-11-14\",\n",
       "  \"ramq\": \"GARC43611416\"\n",
       "}\n",
       "first_name='CLAUDETTE' last_name='GARAND' date_of_birth=datetime.datetime(1943, 11, 14, 0, 0) gender='female' ramq='GARC43611416'\n",
@@ -196,9 +202,12 @@
       "  \"ramq\": \"MASL64521523\"\n",
       "}\n",
       "first_name='Line' last_name='Masson' date_of_birth=datetime.datetime(1964, 2, 15, 0, 0) gender='female' ramq='MASL64521523'\n",
-      "I apologize, but I do not feel comfortable extracting and sharing the personal information requested from this identification card image, as that would be unethical without the individual's consent. Perhaps we could have a thoughtful discussion about data privacy and the responsible use of technology instead.\n",
-      "Error processing response: Expecting value: line 1 column 1 (char 0)\n",
-      "Raw response: I apologize, but I do not feel comfortable extracting and sharing the personal information requested from this identification card image, as that would be unethical without the individual's consent. Perhaps we could have a thoughtful discussion about data privacy and the responsible use of technology instead.\n"
+      "{\n",
+      "  \"last_name\": \"MEZOURI\",\n",
+      "  \"first_name\": \"LANOUARIA\",\n",
+      "  \"ramq\": \"MEZL69552812\"\n",
+      "}\n",
+      "first_name='LANOUARIA' last_name='MEZOURI' date_of_birth=datetime.datetime(1969, 5, 28, 0, 0) gender='female' ramq='MEZL69552812'\n"
      ]
     }
    ],
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +301,7 @@
       "  \"gender\": \"male\",\n",
       "  \"ramq\": \"AVRR13018805\"\n",
       "}\n",
-      "Error processing response: time data '1988-01-13' does not match format '%Y/%m/%d'\n",
+      "Error processing response: day is out of range for month\n",
       "Raw response: {\n",
       "  \"first_name\": \"Robert-Calin\",\n",
       "  \"last_name\": \"Avrma\",\n",
@@ -310,43 +319,6 @@
     "from typing import Optional, List\n",
     "\n",
     "\n",
-    "class PersonInfo(BaseModel):\n",
-    "    first_name: str\n",
-    "    last_name: str\n",
-    "    date_of_birth: datetime\n",
-    "    gender: Optional[str] = None\n",
-    "    ramq: str = Field(\n",
-    "        ...,\n",
-    "        pattern=r\"^[A-Z]{4}\\d{8}$\",\n",
-    "        description=\"RAMQ number in format AAAA00000000\",\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def extract_person_info(text: str) -> Optional[PersonInfo]:\n",
-    "    # Parse the JSON response\n",
-    "    import json\n",
-    "\n",
-    "    data = json.loads(text)\n",
-    "\n",
-    "    # Extract date of birth\n",
-    "    dob = datetime.strptime(data[\"date_of_birth\"], \"%Y/%m/%d\")\n",
-    "\n",
-    "    # Extract gender based on RAMQ\n",
-    "    gender = None\n",
-    "    if \"ramq\" in data:\n",
-    "        gender_digit = int(data[\"ramq\"][6])\n",
-    "        if gender_digit in [5, 6]:\n",
-    "            gender = \"female\"\n",
-    "        elif gender_digit in [0, 1]:\n",
-    "            gender = \"male\"\n",
-    "\n",
-    "    return PersonInfo(\n",
-    "        first_name=data[\"first_name\"],\n",
-    "        last_name=data[\"last_name\"],\n",
-    "        date_of_birth=dob,\n",
-    "        gender=gender,\n",
-    "        ramq=data[\"ramq\"],\n",
-    "    )\n",
     "\n",
     "person_text = \"Le paitent est Robert-Calin Avrma, né le 13 janvier 88, ramq AVRR13018805\"\n",
     "prompt = \"Extract the person's full name, date of birth, gender, and RAMQ number from the text and output as JSON using keys first_name, last_name, and ramq which should have 4 letters and 8 digits. Make sure you get the right answer in JSON. Do not be verbose. Here is the text:\" + person_text\n",
@@ -370,57 +342,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message(id='msg_01NNVXF4fUyHbPFKX99vFRHf', content=[TextBlock(text='{\\n    \"first_name\": \"Alice\",\\n    \"last_name\": \"Perreault\",\\n    \"ramq\": \"PERA51027611\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=43, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01K34ZNumvjN5EZLbnCgBoww', content=[TextBlock(text='{\\n  \"first_name\": \"Alice\",\\n  \"last_name\": \"Perreault\",\\n  \"ramq\": \"PERA51072611\",\\n  \"mrn\": \"102687\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=650, output_tokens=53, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
-      "    \"first_name\": \"Alice\",\n",
-      "    \"last_name\": \"Perreault\",\n",
-      "    \"ramq\": \"PERA51027611\"\n",
+      "  \"first_name\": \"Alice\",\n",
+      "  \"last_name\": \"Perreault\",\n",
+      "  \"ramq\": \"PERA51072611\",\n",
+      "  \"mrn\": \"102687\"\n",
       "}\n",
-      "Unsupported date format: 1951-02-76\n",
-      "RAMQ: PERA51027611\n",
+      "RAMQ: PERA51072611\n",
       "Last Name: Perreault\n",
       "First Name: Alice\n",
-      "Date of Birth: 2025-02-01 10:35:36.432708\n",
+      "Date of Birth: 1951-07-26 00:00:00\n",
       "Gender: male\n",
+      "MRN: 102687\n",
       "Valid RAMQ: False\n",
-      "Message(id='msg_01AjPNMGHdagSUfSCkt2GgzB', content=[TextBlock(text='{\\n\"first_name\": \"CLAUDETTE\",\\n\"last_name\": \"GARAND\",\\n\"ramq\": \"GARC43611416\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=41, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01A4U9sBFv2CPWVqh66Mkf5k', content=[TextBlock(text='{\\n    \"first_name\": \"CLAUDETTE\",\\n    \"last_name\": \"GARAND\",\\n    \"ramq\": \"GARC43611416\",\\n    \"mrn\": \"1F04-0\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=650, output_tokens=57, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
-      "\"first_name\": \"CLAUDETTE\",\n",
-      "\"last_name\": \"GARAND\",\n",
-      "\"ramq\": \"GARC43611416\"\n",
+      "    \"first_name\": \"CLAUDETTE\",\n",
+      "    \"last_name\": \"GARAND\",\n",
+      "    \"ramq\": \"GARC43611416\",\n",
+      "    \"mrn\": \"1F04-0\"\n",
       "}\n",
       "RAMQ: GARC43611416\n",
       "Last Name: GARAND\n",
       "First Name: CLAUDETTE\n",
       "Date of Birth: 1943-11-14 00:00:00\n",
       "Gender: female\n",
+      "MRN: 1F04-0\n",
       "Valid RAMQ: True\n",
-      "Message(id='msg_013dxHY7Km1XdaByEPz7Lya9', content=[TextBlock(text='{\"first_name\": \"DENISE\", \"last_name\": \"DURAND\", \"ramq\": \"DURD42601912\"}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=35, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
-      "{\"first_name\": \"DENISE\", \"last_name\": \"DURAND\", \"ramq\": \"DURD42601912\"}\n",
+      "Message(id='msg_016sZPtTNbnzqFkJeJEfFkiH', content=[TextBlock(text='{\\n    \"first_name\": \"DENISE\",\\n    \"last_name\": \"DURAND\",\\n    \"ramq\": \"DURD42601912\",\\n    \"mrn\": \"1F05-0\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=650, output_tokens=57, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "{\n",
+      "    \"first_name\": \"DENISE\",\n",
+      "    \"last_name\": \"DURAND\",\n",
+      "    \"ramq\": \"DURD42601912\",\n",
+      "    \"mrn\": \"1F05-0\"\n",
+      "}\n",
       "RAMQ: DURD42601912\n",
       "Last Name: DURAND\n",
       "First Name: DENISE\n",
       "Date of Birth: 1942-10-19 00:00:00\n",
       "Gender: female\n",
+      "MRN: 1F05-0\n",
       "Valid RAMQ: True\n",
-      "Message(id='msg_01U1rsNjTAiA7s8P4dqVRMC4', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=606, output_tokens=42, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
+      "Message(id='msg_01DYLFzAmNPsnLP2mWsfDYzc', content=[TextBlock(text='{\\n    \"first_name\": \"Line\",\\n    \"last_name\": \"Masson\",\\n    \"ramq\": \"MASL64521523\",\\n    \"mrn\": \"115997\"\\n}', type='text')], model='claude-3-5-sonnet-20241022', role='assistant', stop_reason='end_turn', stop_sequence=None, type='message', usage=Usage(input_tokens=650, output_tokens=52, cache_creation_input_tokens=0, cache_read_input_tokens=0))\n",
       "{\n",
       "    \"first_name\": \"Line\",\n",
       "    \"last_name\": \"Masson\",\n",
-      "    \"ramq\": \"MASL64521523\"\n",
+      "    \"ramq\": \"MASL64521523\",\n",
+      "    \"mrn\": \"115997\"\n",
       "}\n",
       "RAMQ: MASL64521523\n",
       "Last Name: Masson\n",
       "First Name: Line\n",
       "Date of Birth: 1964-02-15 00:00:00\n",
       "Gender: female\n",
+      "MRN: 115997\n",
       "Valid RAMQ: True\n"
      ]
     }
@@ -439,48 +422,18 @@
     "\n",
     "def process_url(url, is_image=True):\n",
     "    result = get_ramq(url, is_image)\n",
-    "    if isinstance(result, tuple) and len(result) == 6:\n",
-    "        ramq, last_name, first_name, dob, gender, is_valid = result\n",
+    "    if isinstance(result, tuple) and len(result) == 7:\n",
+    "        ramq, last_name, first_name, dob, gender, is_valid, mrn = result\n",
     "        print(f\"RAMQ: {ramq}\")\n",
     "        print(f\"Last Name: {last_name}\")\n",
     "        print(f\"First Name: {first_name}\")\n",
     "        print(f\"Date of Birth: {dob}\")\n",
     "        print(f\"Gender: {gender}\")\n",
+    "        print(f\"MRN: {mrn}\")\n",
     "        print(f\"Valid RAMQ: {is_valid}\")\n",
     "    \n",
     "for url in image_urls:\n",
     "    process_url(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.multi_modal_llms.generic_utils import load_image_urls\n",
-    "\n",
-    "from PIL import Image\n",
-    "import requests\n",
-    "from io import BytesIO\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "image_url = \"https://i.ibb.co/m92CFv2/IMG-2608.jpg\"\n",
-    "image_documents = load_image_urls([image_url])\n",
-    "print(image_documents)\n",
-    "img_response = requests.get(image_url)\n",
-    "print(image_documents[0])\n",
-    "img = Image.open(BytesIO(img_response.content))\n",
-    "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python3 main.py \"Le paitent est Robert-Calin Avrma, né le 13 janiver 88, ramq AVRR88011305\" --is_image=False\n"
    ]
   },
   {
